src/styles/pages/_home.scss
.home {
  width: 100vw;
  background-color: #000;

  .show-ranking {
    position: absolute;
    display: flex;
    align-items: center;
    top: $header-height/4;
    right: 30px;
    opacity: 0;
    transition: opacity 0ms linear;
    cursor: pointer;
    @include responsive(mobile) {
      right: 15px;
    }

    i {
      color: $secondary;
      font-size: 24px;
      margin-right: 10px;
    }

    .text {
      margin-top: 2px;

      @include responsive(mobile) {
        display: none;
      }
    }

    &.visible {
      opacity: 1;
      transition: opacity 1000ms linear;
      transition-delay: 250ms;
    }
  }
}

.tooltip-menu {
  .tooltip-menu-item {
    width: 128px;
    padding-left: 8px;
    cursor: pointer;
    margin: 4px 0;
  }
}

.mobile-home {
  width: 100vw;
  overflow-x: hidden;

  .mobile-youtube-container {
    position: relative;
    z-index: 999;
    width: 100vw;
    background-color: #000;
    transform: translateX(100vw);
    transition: transform 250ms linear;

    &.fullscreen {
      transform: translateX(0);
    }
  }

  .mobile-youtube-header {
    display: flex;
    align-items: center;
    width: 100vw;
    height: 50px;
    padding-left: 10px;
    color: $secondary;
    background-color: #000;
    font-size: 1.5rem;
  }
}

